testsuite/tests/explicit-dicts/should_fail/NoTyVar.stderr

NoTyVar.hs:13:13: error:
    • Explicit dictionary application to: ‘Ord Int’
      is not allowed because the instance incoherence check
      requires type-variable arguments
    • In the expression: maxInt ((absOrd :: Ord Int))
      In an equation for ‘maxAbsInt’:
          maxAbsInt = maxInt ((absOrd :: Ord Int))
